# question-generator-of-math

./: CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: Dockerfile
.pnpm-store/v3/files/00/: 007d862a2642ce435d6711075aeab31194b2d6d1ae814e3cf540a26364ff75c74792721190a13b24d67b6a1ac8a9ec4acaff91c1aa17ecfacae1fa1c7a4dd0-index.json  3b4c91f1ee5aae2db2426cae2da7d856643913bc672848fb3233ef34eb0c080312d72dd637713a0dd8b1905f1e12a398ca162ce482afeeb8aab1031a8fc36d-index.json  7c7812ea29fdd5c50be571e7cf5a9456daf1022d8c5fbc85ff0bb66ba20b01f2238ac75d0b4e38435a33c92f61fe5f4747510a1cb7c3358867d59b07b156a3-index.json  e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6faf7cc1def64b7b279dd6c0bd8676dc39cf7f4ab33233944f42b906cf8692f59a3-index.json
.pnpm-store/v3/files/01/: 56f0dd42767bd6eaeb8bd2692f409b47e37b53daf296c6a934ec9977da2223299ebe4394385f24eb8b8fd49ff7964f5430147ab0df124f3c30f98f7bb50242-index.json
.pnpm-store/v3/files/02/: a4e200e2dc8fce714bbbd0f10900578d613c3209ef55c907844252bce8ff518cd8243086424669ff4782bec13ae80c46980652ba9183f0eb0439781f8d3ef2-index.json
.pnpm-store/v3/files/03/: cbf0e6cf8180e6bdebc22bb7c04eec37d625313415eec67b7857f33cc30750e7c0c65335d2baa85d887056a8fbfee7ce4d6f4b2b0a705a7ede4bb8be132969-index.json
.pnpm-store/v3/files/04/: a94294c99844ecbd522574dd2c0d99c9248e7f101d569692aa00ab38af69bbdd19cc0d18c30c1ffe6ccc09f2c26b13054cc3b14e7bfe6162d2ca780503ba74-index.json  (+2 more)
app/: package.json  pnpm-lock.yaml
app/src/: root.tsx
doc/: 開發指南.xlsx
(+275 files in other folders)
