[tool.poetry]
name = "question-generator-of-math"
version = "0.1.0"
description = ""
authors = ["Arvin Yang"]
readme = "README.md"
packages = [{include = "question_generator_of_math"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
